# piano-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  cool_notes2.yaml  flake.nix  shell.nix
assets/: notes.txt
src/: arguments.rs  game.rs  lib.rs  main.rs  network.rs  notes.rs  output.rs  play.rs
src/game/: keyboard.rs  notes.rs  notes_file.rs  output.rs  play.rs  record.rs  screen.rs
src/game/notes/: play.rs
src/network/: receiver.rs  sender.rs  types.rs
