[package]
name = "piano-rs"
version = "0.1.0"
authors = ["Ritiek <ritiekmalhotra123@gmail.com>"]
edition = "2018"
description = "Play piano in the terminal using PC (computer) keyboard"
repository = "https://github.com/ritiek/piano-rs"
readme = "README.md"
keywords = ["music", "piano", "terminal", "cli", "notes"]
categories = ["multimedia::audio", "command-line-utilities"]
license = "MIT"

[dependencies]
bincode = "1.1"
serde_derive = "1.0"
serde = "1.0"
#clap = "2.27"
clap = "2.33"
#rodio = "0.5"
rodio = "0.9"
rustbox = "0.11"
yaml-rust = "0.4"

[[bin]]
name = "piano-rs"
